# Fractals

./: CMakeLists.txt  README.md  fractal.cpp  fractal.h  gui.cpp  gui.h  main.cpp  module.h
